# henka

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml.example
.cargo/: config.toml
.github/workflows/: release.yml
crates/henka-core/: Cargo.toml
crates/henka-core/src/: edit.rs  error.rs  language.rs  lib.rs  operation.rs  provider.rs  registry.rs  vcs.rs
crates/henka-lang-java/: Cargo.toml
crates/henka-lang-java/src/: error.rs  jdtls.rs  lib.rs  lsp.rs  operations.rs  provider.rs
crates/henka-lang-java/tests/: bundle.rs  lifecycle.rs  operations.rs  workspaces.rs
crates/henka-lang-rust/: Cargo.toml
crates/henka-lang-rust/src/: analyzer.rs  error.rs  lib.rs  operations.rs  provider.rs
crates/henka-lang-rust/tests/: operations.rs
crates/henka-lang-ts/: Cargo.toml
crates/henka-lang-ts/src/: error.rs  lib.rs  operations.rs  provider.rs  server.rs
crates/henka-lang-ts/tests/: operations.rs
crates/henka-lsp/: Cargo.toml
crates/henka-lsp/src/: client.rs  convert.rs  lib.rs  session.rs
crates/henka-server/: Cargo.toml
crates/henka-server/skills/: refactoring.md
crates/henka-server/src/: main.rs  mcp.rs  ops.rs  pathmap.rs
crates/refactor-core/: Cargo.toml
crates/refactor-core/src/: edit.rs  error.rs  lib.rs  project.rs  provider.rs  registry.rs  vcs.rs
crates/refactor-lang-java/: Cargo.toml
crates/refactor-lang-java/src/: error.rs  jdtls.rs  lib.rs  lsp.rs  operations.rs  provider.rs
crates/refactor-lang-java/tests/: bundle.rs  lifecycle.rs  operations.rs
crates/refactor-lsp/: Cargo.toml
crates/refactor-lsp/src/: client.rs  error.rs  framing.rs  lib.rs
crates/refactor-server/: Cargo.toml
crates/refactor-server/skills/: refactoring.md
crates/refactor-server/src/: main.rs  mcp.rs  ops.rs
docs/: SPEC.md  deploying.md
jdtls-bundle/: build.sh  plugin.xml
jdtls-bundle/src/dev/henka/jdtls/: HenkaDelegateCommandHandler.java
jdtls-bundle/src/dev/refactor/jdtls/: RefactorDelegateCommandHandler.java
scripts/: fetch-jdtls.sh  fetch-rust-analyzer.sh  fetch-typescript-language-server.sh  smoke-mcp.py
xtask/: Cargo.toml
xtask/src/: main.rs
