[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates
refactor-core = { path = "crates/refactor-core" }
refactor-lsp = { path = "crates/refactor-lsp" }
refactor-lang-java = { path = "crates/refactor-lang-java" }

# External
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
    "io-util",
    "io-std",
    "signal",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "0.8", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
    "macros",
    "schemars",
] }
schemars = "1"
axum = "0.8"
async-trait = "0.1"
similar = { version = "2", features = ["text", "unicode"] }
walkdir = "2"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
