[workspace]
resolver = "3"
members = ["crates/*", "xtask"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates
henka-core = { path = "crates/henka-core" }
henka-lsp = { path = "crates/henka-lsp" }
henka-lang-java = { path = "crates/henka-lang-java" }
henka-lang-rust = { path = "crates/henka-lang-rust" }

# External
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
    "io-util",
    "io-std",
    "signal",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
    "macros",
    "schemars",
] }
schemars = "1"
axum = "0.8"
async-trait = "0.1"
similar = { version = "3", features = ["text", "unicode"] }
walkdir = "2"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
