[package]
name = "henka-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
similar = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
