[package]
name = "refactor-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
