[package]
name = "refactor-server"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "refactor-server"
path = "src/main.rs"

[dependencies]
refactor-core = { workspace = true }
refactor-lang-java = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tempfile = { workspace = true }
